# diglet

./: Cargo.toml  LICENSE  flake.nix  index.html
public/: style.css
public/model/: weights.safetensors
src/: main.rs  model.rs
