cargo-features = ["edition2024"]

[package]
name = "diglet"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.2"
candle-nn = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.102"
leptos = { version = "0.8.3", features = ["csr"] }
wasm-bindgen = "0.2.125"
web-sys = { version = "0.3.102", features = [
  "Document",
  "Element",
	"HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
	"DomRect",
	"ImageData",
  "Window"
] }
